<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_penulis"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            tools:src="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_nama_penulis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_penulis"
            android:textSize="36sp"
            android:textStyle="bold"
            android:fontFamily="@font/peach_sundress"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:fontFamily="@font/raleway_light"/>

    </LinearLayout>

    <LinearLayout
        android:layout_above="@id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:src="@drawable/pawprint"
            android:layout_marginEnd="6dp" />
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_above="@id/copyright"
            android:text="@string/version"
            android:fontFamily="@font/raleway_light"/>
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright_2019"
        android:fontFamily="@font/raleway_light"/>

</RelativeLayout>