<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:id="@+id/relative_atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="206dp"
                android:layout_height="277dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                tools:src="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/img_ig"
                    android:layout_width="27dp"
                    android:layout_height="24dp"
                    android:padding="2dp"
                    android:src="@drawable/instagram" />
                <TextView
                    android:id="@+id/tv_ig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram"
                    android:gravity="center_horizontal"
                    android:padding="2dp"/>


            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/linear_photo"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="^^^^^^^^^^^^^^^^^^^^^^^^^^"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boba_name"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/raleway_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="============"
                android:textSize="22sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="35dp"
                    android:src="@drawable/rupiah"/>

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="30dp"
                    android:padding="8dp"
                    android:text="@string/boba_price"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="35dp"
                    android:src="@drawable/star" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="30dp"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_regular"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="^^^^^^^^^^^^^^^^^^^^^^^^^^"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/kata_mereka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hi, Bobas"
        android:layout_below="@id/relative_atas"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:textSize="40sp"
        android:fontFamily="@font/raleway_light"/>


    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boba_detail"
        android:layout_below="@id/kata_mereka"
        android:padding="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/ibtn_share"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_share"
            android:background="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/ibtn_fav"
            android:layout_width="286dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_fav"
            android:background="@color/colorFavorite"/>
    </LinearLayout>



</RelativeLayout>